@@ -12,9 +12,8 @@
 <!--[if lt IE 7]>
 <style>
 body {behavior: url(themes/curve/csshover3.htc );}
-.dropmenu li {width: 1px;}
-.dropmenu li a.firstlevel span.firstlevel {white-space: nowrap;}
-.main_menu {overflow: auto;}
+.dropmenu li {width: 1px;} .dropmenu li a.firstlevel span.firstlevel {white-space: nowrap;} .main_menu {overflow: auto;}
+#cpg_header_block_outer div.cpg_header_block_inner {height: auto !important;height: 95px;}
 </style>
 <![endif]-->
 {JAVASCRIPT}
